Adds PlanNode.distinct() and PairPlanNode.distinct()